[Add review service and fixed bug in login and register system]

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "Mark4869",
-    "database": "What's_food",
+    "database": "Whats_food",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false,
