--- a/config/config.json
+++ b/config/config.json
@@ -6,7 +6,8 @@
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false,
-    "salt_length": 12
+    "salt_length": 12,
+    "timezone": "Asia/Bangkok"
   },
   "test": {
     "username": "root",
